Fixed grid bottom label alignment for human phase tissues

--- a/src/sass/dataStatus/_dataStatusTable.scss
+++ b/src/sass/dataStatus/_dataStatusTable.scss
@@ -329,7 +329,7 @@
 
         /* anlge positioning for table header items */
         .footer-label {
-          transform: translateX(180px) rotate(45deg);
+          transform: translateX(100px) rotate(45deg);
         }
       }
     }
